--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <button class="decimal">.</button> 
       </div>
     </div>
-    <script src="clac.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
